--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -15,7 +15,7 @@
         height: 1000px;
     }
 
-    h1 {
+    title {
         display: flex;
         color: rgb(248, 248, 248);
         font-size: 40px;
